# Filters

./: .gitignore  CMakeLists.txt  README  README.md  local-deb-cmake.sh  local-rel-cmake.sh
.github/workflows/: codeql-analysis.yml  msvc-analysis.yml
docs/: index.md
icons/: CMakeLists.txt  CMakeLists.txt~
src/: CMakeLists.txt  filters.cpp  filters.desktop  filters.h  filtersui.rc  main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui  moc_mainwidget.cpp  wlogtext.cpp  wlogtext.h  wlogtextprivate.h
